--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "metronome-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "![wireframe](https://github.com/ignazka/metronome-backend/blob/master/wireframe.png?raw=true)\r An application for musicians.\r Artists are able to create setlists with BPM next to the song. BPM is editable.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ignazka/metronome-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ignazka/metronome-backend/issues"
+  },
+  "homepage": "https://github.com/ignazka/metronome-backend#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "mongoose": "^6.2.1"
+  }
 }
