nice, running: signup login
Co-authored-by: Philipp Kastl <philippkastl@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "![wireframe](https://github.com/ignazka/metronome-backend/blob/master/wireframe.png?raw=true)\r An application for musicians.\r Artists are able to create setlists with BPM next to the song. BPM is editable.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
-    "mongoose": "^6.2.1"
+    "mongoose": "^6.2.1",
+    "nodemon": "^2.0.15"
   }
 }
